chore(release): 1.0.0 [skip ci]
# 1.0.0 (2020-12-19)

### Features

* initial release ([48e6377](https://github.com/ridvanaltun/tough-cookie-ftp-store/commit/48e63774c1f8a3df8e930ac9f643bc277811ec79))

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tough-cookie-ftp-store",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "description": "A JSON file store implementation for tough-cookie module.",
   "main": "lib/cookie-ftp-store.js",
   "scripts": {
